--- a/app/src/main/res/layout/fragment_warranty_registration.xml
+++ b/app/src/main/res/layout/fragment_warranty_registration.xml
@@ -27,9 +27,10 @@
             android:scrollbars="vertical">
 
 
-            <RelativeLayout
+            <LinearLayout
+                style="@style/BothMatch"
                 android:layout_marginTop="@dimen/margin_30"
-                style="@style/BothMatch">
+                android:orientation="vertical">
 
                 <!-- modelno -->
                 <com.incon.connect.custom.view.CustomTextInputLayout
@@ -54,7 +55,6 @@
                 <com.incon.connect.custom.view.CustomTextInputLayout
                     android:id="@+id/input_layout_description"
                     style="@style/Register_TextInputLayout"
-                    android:layout_below="@id/input_layout_model_number"
                     android:hint="@string/action_description"
                     android:visibility="gone"
                     app:errorEnabled="true"
@@ -66,9 +66,9 @@
                         style="@style/Add_new_model_TextInputEditText"
                         android:focusable="true"
                         android:imeOptions="actionNext"
-                        android:tag="1"
-                        android:scrollHorizontally="false"
                         android:inputType="textMultiLine"
+                        android:scrollHorizontally="false"
+                        android:tag="1"
                         android:text="@={warrantyRegistration.description}"
                         />
 
@@ -217,7 +217,6 @@
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
 
-
                 <CheckBox
                     android:id="@+id/product_status"
                     android:layout_width="wrap_content"
@@ -225,6 +224,7 @@
                     android:layout_below="@id/input_layout_invoicenumber"
                     android:layout_centerHorizontal="true"
                     android:checked="true"
+                    android:layout_gravity="center"
                     android:text="@string/action_product_status"
                     android:visibility="gone"/>
 
@@ -243,7 +243,7 @@
                     android:textColor="@color/tueo_theme"
                     android:textSize="@dimen/text_size_13"/>
 
-            </RelativeLayout>
+            </LinearLayout>
 
         </ScrollView>
 
