--- a/app/src/main/res/layout/fragment_add_new_model.xml
+++ b/app/src/main/res/layout/fragment_add_new_model.xml
@@ -73,7 +73,7 @@
                         android:imeOptions="actionNext"
                         android:inputType="textMultiLine"
                         android:scrollHorizontally="false"
-                        android:tag="1"
+                        android:tag="2"
                         android:text="@={addNewModel.description}" />
 
                 </com.incon.connect.custom.view.CustomTextInputLayout>
@@ -86,7 +86,7 @@
                     android:layout_marginBottom="@dimen/margin_24"
                     android:focusable="true"
                     android:hint="@string/add_new__category"
-                    android:tag="2"
+                    android:tag="3"
                     android:text="@={addNewModel.categoryId}"
                     android:visibility="visible"
                     app:errorEnabled="true"
@@ -102,7 +102,7 @@
                     android:layout_marginBottom="@dimen/margin_24"
                     android:focusable="true"
                     android:hint="@string/add_new__division"
-                    android:tag="2"
+                    android:tag="4"
                     android:text="@={addNewModel.divisionId}"
                     android:visibility="visible"
                     app:errorEnabled="true"
@@ -118,7 +118,7 @@
                     android:layout_marginBottom="@dimen/margin_24"
                     android:focusable="true"
                     android:hint="@string/action_brand"
-                    android:tag="2"
+                    android:tag="5"
                     android:text="@={addNewModel.productBrand}"
                     android:visibility="gone"
                     app:errorEnabled="true"
@@ -133,7 +133,7 @@
                     android:layout_marginBottom="@dimen/margin_24"
                     android:focusable="true"
                     android:hint="@string/add_new__type"
-                    android:tag="2"
+                    android:tag="6"
                     android:text="@={addNewModel.divisionId}"
                     android:visibility="gone"
                     app:errorEnabled="true"
@@ -141,11 +141,36 @@
                     app:met_textColor="@color/colorForgotPasswordHintText"
                     app:met_textColorHint="@color/colorForgotPasswordHintText" />
 
+                <!--MRP price-->
+                <com.incon.connect.custom.view.CustomTextInputLayout
+                    android:id="@+id/input_layout_mrp_price"
+                    style="@style/Register_TextInputLayout"
+                    android:layout_below="@id/spinner_type"
+                    android:hint="@string/add_new__mrp_price"
+                    app:errorEnabled="true"
+                    app:fontName="fonts/OpenSans-Regular.ttf"
+                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edittext_mrp_price"
+                        style="@style/Add_new_model_TextInputEditText"
+                        android:focusable="true"
+                        android:imeOptions="actionNext"
+                        android:inputType="number"
+                        android:maxLength="@integer/character_limit_45"
+                        android:maxLines="1"
+                        android:tag="7"
+                        android:text="@={addNewModel.mrpPrice}"
+                        />
+
+                </com.incon.connect.custom.view.CustomTextInputLayout>
+
+
                 <!--price-->
                 <com.incon.connect.custom.view.CustomTextInputLayout
                     android:id="@+id/input_layout_price"
                     style="@style/Register_TextInputLayout"
-                    android:layout_below="@id/spinner_type"
+                    android:layout_below="@id/input_layout_mrp_price"
                     android:hint="@string/add_new__price"
                     app:errorEnabled="true"
                     app:fontName="fonts/OpenSans-Regular.ttf"
@@ -159,7 +184,7 @@
                         android:inputType="number"
                         android:maxLength="@integer/character_limit_45"
                         android:maxLines="1"
-                        android:tag="1"
+                        android:tag="8"
                         android:text="@={addNewModel.price}" />
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
@@ -180,7 +205,7 @@
                         android:imeOptions="actionNext"
                         android:maxLength="@integer/character_limit_45"
                         android:maxLines="1"
-                        android:tag="1"
+                        android:tag="9"
                         android:text="@={addNewModel.notes}" />
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
