--- a/app/src/main/res/layout/fragment_product_assign.xml
+++ b/app/src/main/res/layout/fragment_product_assign.xml
@@ -70,13 +70,36 @@
                         android:text="@={assignQrCode.description}" />
 
                 </com.incon.connect.custom.view.CustomTextInputLayout>
+                <!-- MRP  price -->
+                <com.incon.connect.custom.view.CustomTextInputLayout
+                    android:id="@+id/input_layout_mrp_price"
+                    style="@style/Register_TextInputLayout"
+                    android:layout_below="@id/input_layout_description"
+                    android:hint="@string/add_new__mrp_price"
+                    app:errorEnabled="true"
+                    app:fontName="fonts/OpenSans-Regular.ttf"
+                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edittext_mrp_price"
+                        style="@style/Add_new_model_TextInputEditText"
+                        android:focusable="true"
+                        android:imeOptions="actionNext"
+                        android:inputType="number"
+                        android:maxLength="@integer/character_limit_45"
+                        android:maxLines="1"
+                        android:tag="3"
+                        android:text="@={assignQrCode.mrpPrice}"
+                        />
+
+                </com.incon.connect.custom.view.CustomTextInputLayout>
 
 
                 <!--price-->
                 <com.incon.connect.custom.view.CustomTextInputLayout
                     android:id="@+id/input_layout_model_price"
                     style="@style/Register_TextInputLayout"
-                    android:layout_below="@id/input_layout_description"
+                    android:layout_below="@id/input_layout_mrp_price"
                     android:hint="@string/add_new__price"
                     app:errorEnabled="true"
                     app:fontName="fonts/OpenSans-Regular.ttf"
