--- a/app/src/main/res/layout/fragment_warranty_registration.xml
+++ b/app/src/main/res/layout/fragment_warranty_registration.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
             name="warrantyRegistration"
-            type="com.incon.connect.dto.warrantyregistration.WarrantyRegistration"/>
+            type="com.incon.connect.dto.warrantyregistration.WarrantyRegistration" />
 
         <variable
             name="fragment"
-            type="com.incon.connect.ui.warrantyregistration.WarrantyRegistrationFragment"/>
+            type="com.incon.connect.ui.warrantyregistration.WarrantyRegistrationFragment" />
     </data>
 
 
     <RelativeLayout
         style="@style/BothMatch"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:fillViewport="true">
 
         <ScrollView
             android:id="@+id/scrollview_user_info"
@@ -28,8 +29,8 @@
 
 
             <RelativeLayout
-                android:layout_marginTop="@dimen/margin_30"
-                style="@style/BothMatch">
+                style="@style/BothMatch"
+                android:layout_marginTop="@dimen/margin_30">
 
                 <!-- modelno -->
                 <com.incon.connect.custom.view.CustomTextInputLayout
@@ -46,8 +47,7 @@
                         android:maxLength="@integer/character_limit_100"
                         android:maxLines="1"
                         android:tag="0"
-                        android:text="@={warrantyRegistration.modelNumber}"
-                        />
+                        android:text="@={warrantyRegistration.modelNumber}" />
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
                 <!-- Description -->
@@ -66,11 +66,10 @@
                         style="@style/Add_new_model_TextInputEditText"
                         android:focusable="true"
                         android:imeOptions="actionNext"
-                        android:tag="1"
-                        android:scrollHorizontally="false"
                         android:inputType="textMultiLine"
-                        android:text="@={warrantyRegistration.description}"
-                        />
+                        android:scrollHorizontally="false"
+                        android:tag="1"
+                        android:text="@={warrantyRegistration.description}" />
 
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
@@ -129,15 +128,14 @@
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/edittext_serial_no"
                         style="@style/Register_TextInputEditText"
-                        android:drawableEnd="@drawable/ic_barcode"
+                        android:drawableEnd="@drawable/ima_barcode"
                         android:focusable="true"
                         android:imeOptions="actionNext"
                         android:inputType="textCapWords"
                         android:maxLength="@integer/character_limit_45"
                         android:maxLines="1"
                         android:tag="1"
-                        android:text="@={warrantyRegistration.serialNumber}"
-                        />
+                        android:text="@={warrantyRegistration.serialNumber}" />
 
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
@@ -155,22 +153,47 @@
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/edittext_batch_no"
                         style="@style/Register_TextInputEditText"
-                        android:drawableEnd="@drawable/ic_barcode"
+                        android:drawableEnd="@drawable/ima_barcode"
                         android:focusable="true"
                         android:imeOptions="actionNext"
                         android:inputType="textCapWords"
                         android:maxLength="@integer/character_limit_45"
                         android:maxLines="1"
                         android:tag="2"
-                        android:text="@={warrantyRegistration.batchNumber}"
+                        android:text="@={warrantyRegistration.batchNumber}" />
+                </com.incon.connect.custom.view.CustomTextInputLayout>
+
+
+                <!-- MRP  price -->
+                <com.incon.connect.custom.view.CustomTextInputLayout
+                    android:id="@+id/input_layout_mrp_price"
+                    style="@style/Register_TextInputLayout"
+                    android:layout_below="@id/input_layout_batch_no"
+                    android:hint="@string/add_new__mrp_price"
+                    android:visibility="gone"
+                    app:errorEnabled="true"
+                    app:fontName="fonts/OpenSans-Regular.ttf"
+                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edittext_mrp_price"
+                        style="@style/Add_new_model_TextInputEditText"
+                        android:focusable="true"
+                        android:imeOptions="actionNext"
+                        android:inputType="number"
+                        android:maxLength="@integer/character_limit_45"
+                        android:maxLines="1"
+                        android:tag="3"
+                        android:text="@={warrantyRegistration.mrpPrice}"
                         />
+
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
                 <!-- price -->
                 <com.incon.connect.custom.view.CustomTextInputLayout
                     android:id="@+id/input_layout_price"
                     style="@style/Register_TextInputLayout"
-                    android:layout_below="@id/input_layout_batch_no"
+                    android:layout_below="@id/input_layout_mrp_price"
                     android:hint="@string/add_new__price"
                     android:visibility="gone"
                     app:errorEnabled="true"
@@ -185,9 +208,8 @@
                         android:inputType="number"
                         android:maxLength="@integer/character_limit_45"
                         android:maxLines="1"
-                        android:tag="3"
-                        android:text="@={warrantyRegistration.price}"
-                        />
+                        android:tag="4"
+                        android:text="@={warrantyRegistration.price}" />
 
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
@@ -210,13 +232,10 @@
                         android:imeOptions="actionNext"
                         android:maxLength="@integer/character_limit_45"
                         android:maxLines="1"
-                        android:tag="4"
-                        android:text="@={warrantyRegistration.invoiceNumber}"
-                        />
+                        android:tag="5"
+                        android:text="@={warrantyRegistration.invoiceNumber}" />
 
                 </com.incon.connect.custom.view.CustomTextInputLayout>
-
-
 
                 <CheckBox
                     android:id="@+id/product_status"
@@ -226,7 +245,7 @@
                     android:layout_centerHorizontal="true"
                     android:checked="true"
                     android:text="@string/action_product_status"
-                    android:visibility="gone"/>
+                    android:visibility="gone" />
 
                 <Button
                     android:id="@+id/button_submit"
@@ -241,7 +260,7 @@
                     android:text="@string/add_new_submit"
                     android:textAllCaps="true"
                     android:textColor="@color/tueo_theme"
-                    android:textSize="@dimen/text_size_13"/>
+                    android:textSize="@dimen/text_size_13" />
 
             </RelativeLayout>
 
@@ -254,7 +273,7 @@
             android:layout_marginBottom="15dp"
             android:layout_marginLeft="@dimen/margin_280"
             android:onClick="@{() -> fragment.onNewModelClick()}"
-            app:srcCompat="@drawable/ic_add_new"/>
+            app:srcCompat="@drawable/ic_add_new" />
 
 
     </RelativeLayout>
