--- a/app/src/main/res/layout/fragment_add_new_model.xml
+++ b/app/src/main/res/layout/fragment_add_new_model.xml
@@ -104,7 +104,7 @@
                     android:hint="@string/add_new__division"
                     android:tag="4"
                     android:text="@={addNewModel.divisionId}"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     app:errorEnabled="true"
                     app:met_floatingLabel="highlight"
                     app:met_textColor="@color/colorForgotPasswordHintText"
