1.added textview on notification fragment

--- a/app/src/main/res/layout/fragment_return.xml
+++ b/app/src/main/res/layout/fragment_return.xml
@@ -14,6 +14,7 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/return_recyclerview"
                 style="@style/MatchWrap"
+                android:visibility="gone"
                 android:layout_marginTop="@dimen/margin_10"
                 android:fadeScrollbars="false"
                 android:scrollbarSize="4dp"
